--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.5.3
   smooth_page_indicator: ^1.2.0+3
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +83,12 @@ flutter:
     - family: Mali
       fonts:
         - asset: lib/assets/fonts/Mali-Regular.ttf
+    - family: Lexend
+      fonts:
+        - asset: lib/assets/fonts/Lexend-VariableFont_wght.ttf
+    - family: RadioCanada
+      fonts:
+        - asset: lib/assets/fonts/RadioCanada-VariableFont_wdth,wght.ttf
 
   #   - family: Trajan Pro
   #     fonts:
