--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.3
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,9 +35,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_riverpod: ^2.5.3
+  flutter_riverpod: ^2.6.1
   smooth_page_indicator: ^1.2.0+3
   table_calendar: ^3.1.2
+  firebase_core: ^3.9.0
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.6.0
+  shared_preferences: ^2.3.5
+  fluttertoast: ^8.2.10
+  image_picker: ^1.1.2
+  firebase_storage: ^12.4.0
+  syncfusion_flutter_pdfviewer: ^28.1.38
+  intl: ^0.20.1
+
+dependency_overrides:
+  intl: ^0.20.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +77,9 @@ flutter:
   assets:
      - lib/assets/logos/
      - lib/assets/images/vaccines/
+     - lib/assets/images/child-profiles/
+     - lib/assets/files/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
