Update .gitignore to ignore firebase_options.dart

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@ migrate_working_dir/
 #.vscode/
 
 # Ignore API keys or config files
- /lib/firebase_options.dart
- /android/app/google-services.json
+ lib/firebase_options.dart
+ android/app/google-services.json
 
 # Flutter/Dart/Pub related
 **/doc/api/
