--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,9 +2,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />    
 
     <application
-        android:label="BakunaDo!"
+        android:label="VacCalendar!"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
