--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   firebase_storage: ^12.4.0
   syncfusion_flutter_pdfviewer: ^28.1.38
   intl: ^0.20.1
+  flutter_local_notifications: ^18.0.1
+  permission_handler: ^11.3.1
+  timezone: ^0.10.0
+  flutter_timezone: ^4.0.0
+  
 
 dependency_overrides:
   intl: ^0.20.0
