--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   permission_handler: ^11.3.1
   timezone: ^0.10.0
   flutter_timezone: ^4.0.0
+  better_player: ^0.0.84
   
 
 dependency_overrides:
@@ -84,6 +85,7 @@ flutter:
      - lib/assets/images/vaccines/
      - lib/assets/images/child-profiles/
      - lib/assets/files/
+     - lib/assets/videos/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
