--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,12 @@ dependencies:
   timezone: ^0.10.0
   flutter_timezone: ^4.0.0
   better_player: ^0.0.84
+  connectivity_plus: ^6.1.2
+  video_player: ^2.9.2
+  chewie: ^1.10.0
+  flick_video_player: ^0.9.0
+  flutter_cache_manager: ^3.4.1
+  path_provider: ^2.1.5
   
 
 dependency_overrides:
